feature: add new columns users table
